# LiveKitAgent

AIVisionAPI/: requirements.txt
AIVisionAPI/src/: main.py
AIVisionAPI/src/services/: assistant_service.py
AIVisionBackEnd/: .gitignore  agent.py  hello.py  pyproject.toml
livekit_1.8.3_windows_amd64/: README.md
